--- a/css/styles.css
+++ b/css/styles.css
@@ -854,7 +854,7 @@ body.is-light .c-destop-menu .nav-item.active {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 0;
     display: block;
   }
   .c-cursor {
@@ -897,7 +897,7 @@ body.is-light .c-destop-menu .nav-item.active {
     font-size: 14.3vw;
   }
   .o-portfolio-container .c-main-title :first-child {
-    margin-right: 28%;
+    margin-right: 30%;
   }
   .c-destop-menu {
     left: 0;
@@ -1084,6 +1084,9 @@ body.is-light .c-destop-menu .nav-item.active {
   .o-contact-container .c-main-title span:last-child {
     margin-right: 20%;
     line-height: 39px;
+  }
+  .o-portfolio-container .c-main-title-box {
+    margin-top: 18vh;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
